支持多demo结构

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy subfolder to GitHub Pages
+name: Deploy GitHub Pages (multi-demos)
 
 on:
   push:
@@ -16,10 +16,12 @@ concurrency:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,10 +29,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload artifact
+      - name: Upload demos folder
         uses: actions/upload-pages-artifact@v3
         with:
-          path: TapTap-10y/taptap-10y-h5-demo
+          path: demos   # ⭐ 关键：发布整个 demos 目录
 
       - name: Deploy to GitHub Pages
         id: deployment
